# importer

./: .clinerules  .coverage  .dockerignore  .gitignore  .mcp.json  .user.yml  AGENTS.md  BACKLOG.md  CLAUDE.md  COMPANY_CONSOLIDATION_PLAN.md  COMPANY_ENRICHMENT_PLAN.md  CONTACT_PIPELINE_REDESIGN_SUMMARY.md  DBT_CANDIDATES.md  Dockerfile  Makefile  PHASE_1_COMPLETE.md  PIPELINE_SIMPLIFICATION_PLAN.md  README.md  README_pipeline.md  STRUCTURE.md  XLSX_ANALYSIS.md  XLSX_PIPELINE_DESIGN.md  build-and-push.sh  cron-schedule  cronjob  crontab.txt  dagster_migration_plan.md  dbt_project.yml  docker-entrypoint.sh  domain_consolidation.py  entrypoint.sh  example_drill_down_queries.sql  filesystem_pipeline.py  import-customer.ts  import-invoice.ts  import-salesreceipt.ts  import_items.sh  individual_email_domains.txt  matcher.py  meltano.yml  (+17 more)
.clinerules/: dbt-best-practices.md
.dlt/: config.toml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
config/: sources.yml
docs/: BUG-historydate.md  CUSTOMER.md  NORMALIZE.md  PLAN.md  PRD.md  SALES.md  STRUCTURE.md  append_migration_plan.md  item_history_tracking.md  matching.md  product_importer.md  project_brief.md  refactor-steps.md  schema.sql
dqi/: definitions.py
exports/: historical_items_20250627_155655.jsonl
importer/: __init__.py  cli.py  importer.py  utils.py
macros/: calculate_growth_percentage.sql  country_normalization.sql  optional_columns.sql
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: README.md  sources.yml
pipelines/: template_pipeline.py
prisma/: schema.prisma
processors/: invoice-processor.ts  sales-receipt-processor.ts
scripts/: run_import.sh  startup.sh
shared/: address-processor.ts  (+5 more)
(+180 files in other folders)
