[tool.poetry]
name = "py-importer"
version = "1.1.1"
description = "CSV import processor for database ingestion"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "importer"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
sqlalchemy = "^2.0.0"
click = "^8.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.0"
tld = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov=importer --cov-report=term-missing"
testpaths = ["importer/tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
importer = "importer.cli:cli"
